# text-classifier

./: README.md  pyproject.toml  text_classifier.ipynb
sentiment_analysis/: imdb_labelled.txt:Zone.Identifier
